--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-player": "^1.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
