--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "history": "^4.7.2",
     "jsonwebtoken": "^8.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
